# lcat

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
src/: colors.rs  lcat.rs  main.rs
