[package]
name = "lcat"
version = "0.1.0"
authors = ["Łukasz Krenski <sakulk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.52"
termion = "1.5.5"
chrono = "0.4.11"