[package]
name = "lcat"
version = "0.1.2"
authors = ["Łukasz Krenski <sakulk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termion = "1.5"
chrono = "0.4"
structopt = "0.3"

[profile.release]
lto = true
strip = true
